apps/cli/crates/gateway/src/snapshots/onequery_gateway__tests__render_gateway_logs_output_snapshot.snap
---
source: crates/onequery-gateway/src/tests.rs
expression: "output.lines.join(\"\\n\")"
---
Gateway logs
Log path: /tmp/onequery/data/logs/server.log
Preview:
[onequery-server] listening on http://127.0.0.1:5656
[api] GET /api/health 200
