apps/cli/crates/gateway/src/snapshots/onequery_gateway__tests__render_gateway_output_snapshot.snap
---
source: crates/onequery-gateway/src/tests.rs
expression: "output.lines.join(\"\\n\")"
---
Gateway foundation ready.
Config dir: /tmp/onequery/self-host
Data dir: /tmp/onequery
Listen: 127.0.0.1:5656
Created self-host config.toml: yes
Created secrets.toml: yes
Next steps: onequery gateway (foreground) or onequery gateway start (background)
