apps/cli/crates/gateway/src/snapshots/onequery_gateway__tests__render_gateway_start_output_snapshot.snap
---
source: crates/onequery-gateway/src/tests.rs
expression: "output.lines.join(\"\\n\")"
---
Gateway started in background.
PID: 4242
Listen: 127.0.0.1:5656
Log path: /tmp/onequery/logs/server.log
Next steps: onequery web | onequery auth login | onequery gateway status | onequery gateway logs
