apps/cli/crates/gateway/src/snapshots/onequery_gateway__tests__render_gateway_status_output_reports_running_from_lease_and_runtime_status_snapshot.snap
---
source: crates/gateway/src/tests.rs
assertion_line: 227
expression: "output.lines.join(\"\\n\")"
---
Gateway status
Bootstrapped: yes
Listen: 127.0.0.1:5656
Runtime: running
